# xsv2ledger-cli

./: .gitignore  Cargo.toml  README.md
config/: amex.toml  axis.toml  example.toml  example.yaml  fidelity-tax.toml  fidelity.toml  hsbc.toml  ibkr.toml  monzo.toml  sbi.toml  schwab-non-trades.toml  schwab-trades-and-security_transfers.toml  schwab-trades.toml
docs/: supported-institutions.md
src/: amount.rs  condition_types.rs  cost_amount.rs  date.rs  exclude_condition.rs  invert_sign.rs  ledger_entry.rs  main.rs  note.rs  payee.rs  posting.rs  price.rs  settings.rs  state.rs  xsv2ledger.rs  xsv_to_entry.rs
test/: test.sh
test/config/: test-complete.toml  test-partial.toml
test/expected/: amex.balance  amex.ledger  fidelity.balance  fidelity.ledger  hsbc.balance-err  hsbc.ledger  monzo.balance-err  monzo.ledger  schwab-trades.balance  schwab-trades.ledger  test-complete.balance  test-complete.ledger  test-partial.ledger
test/test_xsv/: amex.csv  hsbc.csv  monzo.csv  sbi-05may.tsv  schwab-trades.csv  test-simple.csv
