[package]
name = "xsv2ledger-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
config = "0.15.19"
csv = "1.4.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-appender = "0.2.3"
tracing-core = "0.1.36"
tracing-subscriber = "0.3.22"
